@@ -1,6 +1,7 @@
 * Development
 - allow setting the port used to connect to the submit host
 - allow using submit -r REV, without package name
+- set _tmppath rpm macro based on tempdir from repsys.conf
 
 * 1.9
 - really fixed -M
